[package]
name = "agentic_tools_wasm"
version = "0.1.0"
edition = "2021"
description = "A library of various tools for Agentic AI, written in Rust and compiled to Wasm."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
base64 = "0.21"
pulldown-cmark = "0.9"
