[package]
name = "agentic_tools_wasm"
version = "0.1.0"
edition = "2021"
description = "A library of various tools for Agentic AI, written in Rust and compiled to Wasm."
repository = "https://github.com/example/agentic_tools_wasm"
license = "MIT"
readme = "README.md"
keywords = ["wasm", "ai", "agents"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
base64 = "0.21"
pulldown-cmark = "0.9"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Window",
  "Storage"
]

[workspace]

[package.metadata.clippy]
warn = ["cargo_common_metadata"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
